frontend/test/should_pass/iterated_007.grg
rule r
{
	x:Node;
	(
		:P();
		
		{+ }
	)[1:*]
	
	{+ }
}

pattern P
{
	alternative {
		Empty {
			.;

			modify {
			}
		}
		Recursive {
			:P();
			.;

			modify {
			}
		}
	}
	
	modify {
	}
}
