frontend/test/should_fail/iterated_007.grg
rule r
{
	x:Node;
	(
		:P();
		
		{+ }
	)[1:*]
	
	{+ }
}

pattern P
{
	alternative {
		Emtpy {
		}
		Recursive {
			:P();
		}
	}
	
	modify {
	}
}
